--- a/src/components/EmployeeDetail/style.css
+++ b/src/components/EmployeeDetail/style.css
@@ -186,6 +186,14 @@ abbr[title] {
   border-radius: 10px !important; /* Rounded corners */
 }
 
+.css-19yy3e5-MuiTypography-root {
+  margin-bottom: 0 !important;
+}
+
+.css-uwwqev {
+  height: auto !important;
+}
+
 /* .box-payslip {
   margin-left: 100 !important;
 } */
