--- a/src/components/EmployeeDetail/style.css
+++ b/src/components/EmployeeDetail/style.css
@@ -1,7 +1,7 @@
 .react-calendar {
   width: 100% !important;
-  max-width: 720px !important;
-  min-width: 360px !important;
+  /* max-width: 720px !important;
+  min-width: 360px !important; */
   padding: 10px;
   background-color: #fff !important;
   color: #222 !important;
@@ -13,6 +13,8 @@
   line-height: 1.125em;
   font-size: large;
 }
+
+
 .css-1an72xi {
   box-shadow: none;
 }
@@ -143,12 +145,8 @@ abbr[title] {
   border-bottom-right-radius: 40px;
 }
 
-.react-calendar__tile--rangeStart:not(
-    .react-calendar__tile--rangeEnd
-  ):enabled:hover,
-.react-calendar__tile--rangeStart:not(
-    .react-calendar__tile--rangeEnd
-  ):enabled:focus {
+.react-calendar__tile--rangeStart:not(.react-calendar__tile--rangeEnd):enabled:hover,
+.react-calendar__tile--rangeStart:not(.react-calendar__tile--rangeEnd):enabled:focus {
   background: #1c1c1c !important;
   border-top-left-radius: 40px;
   border-bottom-left-radius: 40px;
@@ -157,12 +155,8 @@ abbr[title] {
   color: white !important;
 }
 
-.react-calendar__tile--rangeEnd:not(
-    .react-calendar__tile--rangeStart
-  ):enabled:hover,
-.react-calendar__tile--rangeEnd:not(
-    .react-calendar__tile--rangeStart
-  ):enabled:focus {
+.react-calendar__tile--rangeEnd:not(.react-calendar__tile--rangeStart):enabled:hover,
+.react-calendar__tile--rangeEnd:not(.react-calendar__tile--rangeStart):enabled:focus {
   background: #1c1c1c !important;
   border-top-right-radius: 40px;
   border-bottom-right-radius: 40px;
@@ -172,18 +166,22 @@ abbr[title] {
 }
 
 .custom-scroll::-webkit-scrollbar {
-  width: 7px !important; /* Width of the scrollbar */
+  width: 7px !important;
+  /* Width of the scrollbar */
   background-color: #cecece !important;
 }
 
 .custom-scroll::-webkit-scrollbar-thumb {
-  border-radius: 10px !important ; /* Rounded corners */
+  border-radius: 10px !important;
+  /* Rounded corners */
   background-color: #cecece !important;
 }
 
 .custom-scroll::-webkit-scrollbar-track {
-  background-color: #f8f8fa !important; /* Color of the scrollbar track */
-  border-radius: 10px !important; /* Rounded corners */
+  background-color: #f8f8fa !important;
+  /* Color of the scrollbar track */
+  border-radius: 10px !important;
+  /* Rounded corners */
 }
 
 .css-19yy3e5-MuiTypography-root {
@@ -194,25 +192,51 @@ abbr[title] {
   height: auto !important;
 }
 
+.scroll-item-tracking {
+  height: 20vh !important;
+  overflow-y: scroll !important;
+  scrollbar-width: none;
+}
+
 /* .box-payslip {
   margin-left: 100 !important;
 } */
 
 /* Tablet */
-@media only screen and (min-width: 46.25em) and (max-width: 63.9327em) {
-}
+@media only screen and (min-width: 46.25em) and (max-width: 63.9327em) {}
 
 /* Mobile */
-@media only screen and (max-width: 46.1875em) {
-}
+@media only screen and (max-width: 46.1875em) {}
 
 /* Tablet & Mobile */
 @media only screen and (max-width: 63.9327em) {
+
+  /* .react-calendar {
+    width: 50% !important;
+  } */
+
   .css-gg4vpm {
     display: flex;
     flex-direction: column;
     /* justify-content: center; */
     align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+
+  .MuiBox-root .css-1l4w6pd {
+    display: flex;
+    flex-direction: column !important;
+    overflow-y: scroll !important;
+  }
+
+  .makeStyles-modalBox-26 .MuiBox-root .css-1a19dm4 {
+    overflow: scroll;
+  }
+
+  .css-sp8c2n {
+    height: 60vh !important;
   }
 
   .MuiBox-root .css-gg4vpm {
