--- a/src/components/EmployeeDetail/style.css
+++ b/src/components/EmployeeDetail/style.css
@@ -5,29 +5,33 @@
   padding: 10px;
   background-color: #fff !important;
   color: #222 !important;
-  border-bottom-left-radius: 40px;
-  border-bottom-right-radius: 40px;
+  border-radius: 40px;
   border-color: white !important;
-  /* box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2) !important; */
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2) !important;
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.125em;
   font-size: large;
 }
 
+.MuiBox-root .css-uwwqev {
+  margin-top: 0 !important;
+}
+
+.makeStyles-modalBox-10 {
+  padding-bottom: "100px" !important;
+}
 
 .css-1an72xi {
   box-shadow: none;
 }
 
 abbr[title] {
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 .react-calendar__tile:enabled:hover,
 .react-calendar__tile:enabled:focus {
   background: #f8f8fa !important;
-  color: #000 !important;
-  border-radius: 40px;
 }
 
 .react-calendar__tile--now {
@@ -38,9 +42,7 @@ abbr[title] {
 
 .react-calendar__tile--now:enabled:hover,
 .react-calendar__tile--now:enabled:focus {
-  background: #838383 !important;
-  border-radius: 40px;
-  font-weight: bold;
+  background: #bbb9b9 !important;
   color: #fff !important;
 }
 
@@ -127,7 +129,6 @@ abbr[title] {
   color: white !important;
 }
 
-/* border-radius đầy đủ cho ngày được chọn khi chỉ chọn một ngày */
 .react-calendar__tile--rangeStart.react-calendar__tile--rangeEnd {
   border-top-left-radius: 40px;
   border-bottom-left-radius: 40px;
@@ -135,7 +136,6 @@ abbr[title] {
   border-bottom-right-radius: 40px;
 }
 
-/* Đảm bảo border-radius đúng khi ngày đầu tiên hoặc ngày cuối cùng được chọn */
 .react-calendar__tile--rangeStart.react-calendar__tile--rangeEnd:enabled:hover,
 .react-calendar__tile--rangeStart.react-calendar__tile--rangeEnd:enabled:focus,
 .react-calendar__tile--rangeStart.react-calendar__tile--rangeEnd {
@@ -145,8 +145,12 @@ abbr[title] {
   border-bottom-right-radius: 40px;
 }
 
-.react-calendar__tile--rangeStart:not(.react-calendar__tile--rangeEnd):enabled:hover,
-.react-calendar__tile--rangeStart:not(.react-calendar__tile--rangeEnd):enabled:focus {
+.react-calendar__tile--rangeStart:not(
+    .react-calendar__tile--rangeEnd
+  ):enabled:hover,
+.react-calendar__tile--rangeStart:not(
+    .react-calendar__tile--rangeEnd
+  ):enabled:focus {
   background: #1c1c1c !important;
   border-top-left-radius: 40px;
   border-bottom-left-radius: 40px;
@@ -155,8 +159,12 @@ abbr[title] {
   color: white !important;
 }
 
-.react-calendar__tile--rangeEnd:not(.react-calendar__tile--rangeStart):enabled:hover,
-.react-calendar__tile--rangeEnd:not(.react-calendar__tile--rangeStart):enabled:focus {
+.react-calendar__tile--rangeEnd:not(
+    .react-calendar__tile--rangeStart
+  ):enabled:hover,
+.react-calendar__tile--rangeEnd:not(
+    .react-calendar__tile--rangeStart
+  ):enabled:focus {
   background: #1c1c1c !important;
   border-top-right-radius: 40px;
   border-bottom-right-radius: 40px;
@@ -167,21 +175,21 @@ abbr[title] {
 
 .custom-scroll::-webkit-scrollbar {
   width: 7px !important;
-  /* Width of the scrollbar */
   background-color: #cecece !important;
 }
 
 .custom-scroll::-webkit-scrollbar-thumb {
   border-radius: 10px !important;
-  /* Rounded corners */
   background-color: #cecece !important;
 }
 
 .custom-scroll::-webkit-scrollbar-track {
   background-color: #f8f8fa !important;
-  /* Color of the scrollbar track */
   border-radius: 10px !important;
-  /* Rounded corners */
+}
+
+.abbr[title] {
+  text-decoration: none !important;
 }
 
 .css-19yy3e5-MuiTypography-root {
@@ -198,22 +206,151 @@ abbr[title] {
   scrollbar-width: none;
 }
 
-/* .box-payslip {
-  margin-left: 100 !important;
-} */
+.card-custom-id {
+  width: auto !important;
+}
 
 /* Tablet */
-@media only screen and (min-width: 46.25em) and (max-width: 63.9327em) {}
+@media only screen and (min-width: 46.25em) and (max-width: 63.9327em) {
+  .makeStyles-modalBox-10 .MuiBox-root {
+    height: auto;
+  }
+
+  .css-1yqd3s6 {
+    width: 90%;
+  }
+
+  .css-1uzxatu {
+    width: "100%" !important;
+  }
+}
 
 /* Mobile */
-@media only screen and (max-width: 46.1875em) {}
+@media only screen and (max-width: 46.1875em) {
+  .css-iint9g {
+    margin-top: 48% !important;
+  }
+
+  /* main */
+  .css-1yqd3s6 {
+    height: max-content !important;
+    width: max-content !important;
+    padding-top: 0px !important;
+    display: flex;
+    flex-direction: row;
+    overflow-x: scroll;
+    /* scrollbar-width: none;
+    -ms-overflow-style: none; */
+  }
+
+  /* container full 3 box */
+  .MuiBox-root .css-1ylo9ev {
+    display: flex !important;
+    flex-direction: row !important;
+  }
+
+  /* Container full 2 box right */
+  .MuiBox-root .css-1stuxjx {
+    display: flex !important;
+    flex-direction: row !important;
+  }
+
+  /* Table button */
+  .table-container {
+  }
+
+  /* payslips */
+
+  .MuiBox-root .css-uwwqev {
+    margin-top: 100% !important;
+    padding-left: 6%;
+  }
+
+  .font-payslip-dsadvcxd {
+    font-size: smaller !important;
+    color: gray !important;
+  }
+
+  .css-uwwqev {
+  }
+
+  .css-uwwqev div {
+    display: flex !important;
+    /* flex-direction: column !important; */
+  }
+
+  .icon-rgtrv {
+    display: none !important;
+  }
+
+  .table-detail-tracking {
+    font-size: small;
+  }
+
+  .header-table-cvbna {
+    font-size: smaller !important;
+    font-weight: 600 !important;
+  }
+
+  .body-table-cdsana {
+    font-size: small !important;
+  }
+}
+
+.font-payslip-dsadvcxd {
+  font-size: larger;
+  color: gray;
+}
 
 /* Tablet & Mobile */
 @media only screen and (max-width: 63.9327em) {
+  /* main */
+  .css-1yqd3s6 {
+    height: 85% !important;
+    width: 95% !important;
+    padding-top: 0px !important;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
 
-  /* .react-calendar {
-    width: 50% !important;
-  } */
+  /* Header */
+
+  .css-iint9g {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    margin-top: 24% !important;
+  }
+
+  .icon-close-id {
+    height: 100% !important;
+    background-color: "red" !important;
+  }
+
+  /* ==== */
+
+  .MuiBox-root .css-uwwqev {
+    margin-top: 4% !important;
+    padding-left: 6%;
+  }
+
+  .css-1yqd3s6::-webkit-scrollbar {
+    display: none;
+  }
+
+  .css-1uzxatu {
+    width: 100% !important;
+  }
+
+  .css-1stuxjx {
+    width: 100% !important;
+  }
+
+  .MuiBox-root .css-1ylo9ev {
+    flex-direction: column !important;
+  }
 
   .css-gg4vpm {
     display: flex;
@@ -223,7 +360,6 @@ abbr[title] {
     justify-content: center;
     text-align: center;
   }
-
 
   .MuiBox-root .css-1l4w6pd {
     display: flex;
@@ -248,6 +384,12 @@ abbr[title] {
 
   .css-w0kdxw {
     height: 32vh !important;
+  }
+
+  /* Payslips */
+  .font-payslip-dsadvcxd {
+    font-size: medium !important;
+    color: gray;
   }
 }
 
@@ -274,7 +416,3 @@ abbr[title] {
   padding-left: 30;
   font-weight: 800;
 }
-
-/* .main-right-item {
-  margin-left: 300;
-} */
