--- a/src/components/commons/table/style.css
+++ b/src/components/commons/table/style.css
@@ -1,5 +1,5 @@
 .table-container {
-  max-height: 200px;
+  max-height: 160px;
   overflow-y: scroll;
   width: 100%;
   display: block;
@@ -36,6 +36,7 @@ tbody td {
   border: none;
   text-align: center;
   vertical-align: middle;
+  color: gray;
 }
 
 tbody td span {
@@ -45,40 +46,5 @@ tbody td span {
   line-height: 1.5rem;
   border-radius: 8px;
   text-align: center;
-  color: white;
-}
-
-@media only screen and (max-width: 63.9327em) {
-  .main-table {
-    display: none;
-  }
-}
-
-@media only screen and (max-width: 1024px) {
-  .main-table {
-    width: 100%;
-    max-width: 900px;
-  }
-}
-
-@media only screen and (max-width: 768px) {
-  .main-table {
-    width: 100%;
-    max-width: 600px;
-  }
-
-  .item-table {
-    font-size: 14px;
-  }
-}
-
-@media only screen and (max-width: 480px) {
-  .main-table {
-    width: 100%;
-    max-width: 100%;
-  }
-
-  .item-table {
-    font-size: 12px;
-  }
+  color: gray;
 }
